# atypical

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  atypical.toml  oxfmt.config.ts  oxlint.config.ts  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.cargo/: config.toml
.config/: hk.pkl  mise.toml  stub.rs  tombi.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
.husky/: commit-msg  pre-commit
benches/: .gitignore  latency.sh  package-lock.json  package.json
crates/atypical-commit/: Cargo.toml  README.md
crates/atypical-commit/src/: config.rs  ignore.rs  lib.rs  main.rs
crates/atypical-commit/tests/: cli.rs  presets.rs
crates/atypical-config/: Cargo.toml  README.md
crates/atypical-config/src/: lib.rs
crates/atypical-config/tests/: load.rs
npm/: README.md  install.js  package-lock.json  package.json  platforms.mjs  prepare.mjs  prepublish.mjs
npm/scripts/: platforms.ts  prepare.ts  prepublish.ts
presets/: conventional.toml  standard.toml
scripts/: release.sh
