[workspace.package]
name = "atypical"
version = "0.1.0"
edition = "2024"
description = "(Non)-standard enforcing DX"
repository = "https://github.com/kekkon-nexus/atypical"
license = "MIT OR Apache-2.0"
categories = [
  "development-tools",
  "parsing",
  "template-engine",
  "text-processing",
]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
