[workspace.package]
name = "atypical"
version = "0.1.0"
edition = "2024"
description = "(Non)-standard enforcing DX"
repository = "https://github.com/kekkon-nexus/atypical"
license = "MIT OR Apache-2.0"
categories = [
  "development-tools",
  "parsing",
  "template-engine",
  "text-processing",
]

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
chumsky = { version = "0.12", default-features = false }
flagset = { version = "0.4", default-features = false }
