[workspace.package]
version = "0.1.1"
edition = "2024"
description = "(Non)-standard enforcing DX"
repository = "https://github.com/kekkon-nexus/atypical"
license = "MIT OR Apache-2.0"
categories = [
  "development-tools",
  "parsing",
  "template-engine",
  "text-processing",
]

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
ariadne = { version = "0.6", default-features = false }
chumsky = { version = "0.13", default-features = false }
clap = { version = "4.6", default-features = false }
clap-stdin = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false }
toml = { version = "0.9", default-features = false }

atypical-config = { version = "0.1", path = "crates/atypical-config" }
