[package]
name = "atypical-commit"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[[bin]]
name = "commit-lint"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
atypical-config = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
clap-stdin = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }

[dev-dependencies]
toml = { workspace = true, features = ["parse", "serde", "std"] }

[features]
default = ["std", "cli", "color"]

std = [
  "anyhow/std",
  "chumsky/std",
  "chumsky/stacker",
  "clap/std",
  "serde/std",
]

cli = [
  "clap/error-context",
  "clap/derive",
  "clap/help",
  "clap/suggestions",
  "clap/usage",
]
color = ["ariadne/auto-color", "clap/color"]
