[package]
name = "atypical-commit"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "commit-lint"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
atypical-config = { workspace = true }
chumsky = { workspace = true }
clap = { workspace = true }
clap-stdin = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true, features = ["alloc", "derive"] }

[dev-dependencies]
toml = { workspace = true, features = ["parse", "serde", "std"] }

[features]
default = ["cli", "color", "std"]

std = [
  "anyhow/std",
  "chumsky/stacker",
  "chumsky/std",
  "clap/std",
  "serde/std",
]

cli = [
  "clap/derive",
  "clap/error-context",
  "clap/help",
  "clap/suggestions",
  "clap/usage",
]
color = ["ariadne/auto-color", "clap/color"]
