[package]
name = "atypical-config"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true, features = ["parse", "serde", "std"] }

[dev-dependencies]
indoc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
